--- a/Scores Tell Everything about Bob.ipynb
+++ b/Scores Tell Everything about Bob.ipynb
@@ -345,9 +345,14 @@
     "# device = torch.device('cuda:0')\n",
     "# Uncomment if you do not have a GPU:\n",
     "device = torch.device('cpu')\n",
-    "dataset = 'your dataset'  \n",
-    "ofs_num = 99  # Modify the number of orthogonal face images that you want to generate.\n",
-    "savepath='./param/ofs.pt'\n",
+    "savepath='./utils/param/ofs.pt'\n",
+    "\n",
+    "# For your dataset (ex: MS1MV3)\n",
+    "# dataset = 'your dataset'\n",
+    "\n",
+    "# For checking using LFW (can not produce large number of OFS due to the number of contained image in LFW)\n",
+    "dataset = verification.load_bin('./utils/dataset/lfw.bin', (112, 112))\n",
+    "ofs_num = 30  # Modify the number of orthogonal face images that you want to generate.\n",
     "\n",
     "GenOFS(device, dataset, ofs_num, savepath) # OFS is saved in the form of tensors."
    ]
@@ -383,7 +388,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
